# rust-pow2

./: Cargo.toml  plants.txt  rust_pow2.wai
src/: crossbreeder.rs  crossbreeding_results.rs  gene.rs  lib.rs  main.rs  plant.rs  plant16.rs  tests.rs  traits.rs
