[package]
name = "rust-pow2"
version = "0.1.0"
edition = "2021"
authors = ["FlareFlo"]
description = "Library to compute optimal cross-breeding setup for plants in the game Rust"
license = "MIT"


[lib]
name = "rust_pow2"
path = "src/lib.rs"

[[bin]]
name = "rust_pow2"
path = "src/main.rs"

[dependencies]
itertools = "0.13.0"
nonmax = "0.5.5"

[dev-dependencies]
fastrand = "2.1.0"
